--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate-frame": "node --input-type=module generate_wood_frame.js",
+    "process-frame": "node --input-type=module remove_bg.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@imgly/background-removal-node": "^1.4.5",
     "next": "^14.2.33",
     "openai": "^6.7.0",
     "react": "^18.3.1",
